[gd_scene load_steps=4 format=3 uid="uid://c8dbiqkeq64ys"]

[ext_resource type="Script" uid="uid://qbku6a5w10mv" path="res://Scripts/menu.gd" id="1_cayip"]
[ext_resource type="StyleBox" uid="uid://d0qpprl5m0815" path="res://pressed.tres" id="1_xhh6f"]
[ext_resource type="StyleBox" uid="uid://chyknc6i5r8aa" path="res://new_style_box_flat.tres" id="2_cayip"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cayip")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -350.0
offset_right = 326.0
grow_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Rebel Drive"

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = ExtResource("1_xhh6f")
theme_override_styles/pressed = ExtResource("1_xhh6f")
theme_override_styles/normal = ExtResource("2_cayip")
text = "START"

[node name="Scoreboard" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = ExtResource("1_xhh6f")
theme_override_styles/pressed = ExtResource("1_xhh6f")
theme_override_styles/normal = ExtResource("2_cayip")
text = "SCOREBOARD"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = ExtResource("1_xhh6f")
theme_override_styles/pressed = ExtResource("1_xhh6f")
theme_override_styles/normal = ExtResource("2_cayip")
text = "CREDITS"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = ExtResource("1_xhh6f")
theme_override_styles/pressed = ExtResource("1_xhh6f")
theme_override_styles/normal = ExtResource("2_cayip")
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Scoreboard" to="." method="_on_scoreboard_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
